--- a/Reasons/Reasons/Base.lproj/Main.storyboard
+++ b/Reasons/Reasons/Base.lproj/Main.storyboard
@@ -299,7 +299,7 @@
                                         <autoresizingMask key="autoresizingMask"/>
                                         <subviews>
                                             <button translatesAutoresizingMaskIntoConstraints="NO" id="9Ec-Cp-sjY">
-                                                <rect key="frame" x="91.5" y="16" width="48" height="48"/>
+                                                <rect key="frame" x="91" y="16" width="48" height="48"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="9Ec-Cp-sjY" secondAttribute="height" multiplier="1:1" id="JuX-Qi-pzM"/>
                                                     <constraint firstAttribute="width" constant="48" id="Rt1-AP-0lz"/>
@@ -326,7 +326,7 @@
                                         <subviews>
                                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OoU-ak-gdZ">
                                                 <rect key="frame" x="262" y="40" width="255" height="17"/>
-                                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Dedicated to my beloved xxx - YourName" id="wbz-9B-vQb">
+                                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Dedicated to my beloved Claudia - Daniel" id="wbz-9B-vQb">
                                                     <font key="font" metaFont="system"/>
                                                     <color key="textColor" name="controlShadowColor" catalog="System" colorSpace="catalog"/>
                                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
